--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 						</tr>
 					</tbody>
 				</table>
+				
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Paciente</button>
 
 			</section>
 		</main>
@@ -113,6 +116,7 @@
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/pesquisa.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 
 	</body>
 </html>
